--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <html>
-<body background="backgr.gif">
+<body background="backgr2.gif">
 <font color="white" face="Comic Sans MS">
 <br><br><br><br><center>
 <h1>WELCOME TO MY HOME PAGE!!!!!!!!!!!!!!!!</h1><br>
