--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,9 @@
 <h1>WELCOME TO MY HOME PAGE!!!!!!!!!!!!!!!!</h1><br>
 <img src="cat.gif"><img src="goober.gif"><img src="cat.gif"><br>
 hi !!!!!!!!!!!!!!!1 i love silly kitties and cats <br>
+my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
 <A href="https://www.roblox.com/users/525043720/profile"> Sign my guest book. Righ Now. </a>
+made by lego#3419 on discord.gg 
+<img src="stop.jpg" width="203" height="156"/><br>
 </html>
