--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 hi !!!!!!!!!!!!!!!1 i love silly kitties and cats <br>
 my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
-<A href="https://www.roblox.com/users/525043720/profile"> Sign my guest book. Righ Now. </a>
+<A href="https://www.roblox.com/users/525043720/profile"> Sign my guest book. Righ Now. </a> <br>
 made by lego#3419 on discord.gg <br>
 <img src="stop.jpg" width="102" height="78"/><br>
 </html>
