--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
-<body background="backgr2.gif">
-<font color="black" face="Comic Sans MS">
+<body background="star.gif">
+<font color="white" face="Comic Sans MS">
 <br><br><br><br><center>
 <h1>WELCOME TO MY HOME PAGE!!!!!!!!!!!!!!!!</h1><br>
 <img src="cat.gif"><img src="goober.gif"><img src="cat.gif"><br>
