--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,13 @@
 <font color="white" face="Comic Sans MS">
 <br><br><br><br><center>
 <h1>WELCOME TO MY HOME PAGE!!!!!!!!!!!!!!!!</h1><br>
-<img src="cat.gif"><img src="goober.gif"><img src="cat.gif"><br>
 hi !!!!!!!!!!!!!!!1 i love silly kitties and cats <br>
 my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
-<A href="https://www.roblox.com/users/525043720/profile"> Sign my guest book. Righ Now. </a> <br>
+<h1>heres some funny cats</h1><br>
+<img src="cat.gif"><img src="goober.gif"><img src="cat.gif"><br>
+<A href="https://steamcommunity.com/id/cristlemon/"> steam </a> <img src="jeremy.jpg" width="320" height="460"/><br>
+<A href="https://www.roblox.com/users/525043720/profile"> roblox ptofile </a> <br>
 made by lego#3419 on discord.gg <br>
 <img src="stop.jpg" width="102" height="78"/><br>
 </html>
