--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,9 @@
 hi !!!!!!!!!!!!!!!1 i love silly kitties and cats <br>
 my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
-<h1>heres some funny cats</h1><br>
-<img src="cat.gif"><img src="goober.gif"><img src="cat.gif"><br>
-<A href="https://steamcommunity.com/id/cristlemon/"> steam </a> <img src="jeremy.jpg" width="320" height="460"/><br>
+<h1>heres a funny cat</h1><br>
+<img src="cat.gif"><br>
+<A href="https://steamcommunity.com/id/cristlemon/"> steam </a> <img src="jeremy.jpg" width="64" height="92"/><br>
 <A href="https://www.roblox.com/users/525043720/profile"> roblox ptofile </a> <br>
 made by lego#3419 on discord.gg <br>
 <img src="stop.jpg" width="102" height="78"/><br>
