--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,30 @@ my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
 <h1>heres a funny cat</h1><br>
 <img src="cat.gif"><br>
-<A href="https://steamcommunity.com/id/cristlemon/"> steam </a> <img src="jeremy.jpg" width="64" height="92"/><br>
+<h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
+i dont understand why people love mcdonalds so much<br><br>
+  a. the food just straight up isn't good <br>
+    go to any other fast food place (other than arby's or burger king)<br>
+    do you think that that places food is worse than mcdonalds?? <br>
+    didn't think so nerd <br><br>
+  b. mcdonalds is a burger place<br>
+    i hear what you're saying: "obviously dumbfuck"<br>
+    ask anyone what their favorite item is at mcdonalds<br>
+    How many times is it a burger.<br>
+    says 'nuff<br>
+  c. mcdonald's builds brand loyalty through parents<br>
+    people who grew up with mcdonalds generally like it more <br>
+    because people grew up with this place, it built a loyalty to the brand<br>
+    and i'm not saying i dont have loyalty to certain brands, cause i do (and they're pretty irrational)<br>
+    but because these people grew up eating mcdonald's, they associate it with happy times<br>
+    and it has you going back because of those happy times.<br>
+    because your parent brought you there as a child, you think in your subconcious that it's the best.<br>
+  <h1>closing statements</h1><br><br>
+  <h2>mcdonalds has built their entire brand on manipulation and loyalty</h2><br>
+  people who say mcdonald's is the best fast food place are objectively wrong. <br>
+  have these people seriously tried In-N-Out, Whataburger, or Jack in the Box and said it was worse than McDonalds??<br>
+  i'm seriously done having this argument with people, and i just have to express this<br>
+<A href="https://steamcommunity.com/id/cristlemon/"> steam </a><br>
 <A href="https://www.roblox.com/users/525043720/profile"> roblox ptofile </a> <br>
 made by lego#3419 on discord.gg <br>
 <img src="stop.jpg" width="102" height="78"/><br>
