--- a/index4.html
+++ b/index4.html
@@ -12,7 +12,7 @@ i dont understand why people love mcdonalds so much<br><br>
     i hear what you're saying: "obviously dumbfuck"<br>
     ask anyone what their favorite item is at mcdonalds<br>
     How many times is it a burger.<br>
-    says 'nuff<br>
+    says 'nuff<br><br>
   c. mcdonald's builds brand loyalty through parents<br>
     people who grew up with mcdonalds generally like it more <br>
     because people grew up with this place, it built a loyalty to the brand<br>
