--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@ my name is lego (online) and i do things i guess <br>
 <img src="455.jpg" width="400" height="400"/><br>
 <h1>heres a funny cat</h1><br>
 <img src="cat.gif"><br>
-<A href=index4.html> why i hate mcdonalds </a><br>
+<A href=index4.html> to: ramblings of a madman (by me) </a><br>
 <A href="https://steamcommunity.com/id/cristlemon/"> steam </a><br>
 <A href="https://www.roblox.com/users/525043720/profile"> roblox ptofile </a> <br>
 made by lego#3419 on discord.gg <br>
