--- a/index4.html
+++ b/index4.html
@@ -1,6 +1,6 @@
 <html>
 <body style="background-color:red;">
-<font color="yellow" face="Trebuchet">
+<font color="yellow" face="Trebuchet MS">
 <br><br><br><br><center>
  <h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
 i dont understand why people love mcdonalds so much<br><br>
