--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,8 @@
 <body style="background-color:red;">
 <font color="yellow" face="Trebuchet MS">
 <br><br><br><br><center>
- <h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
+<h3>ramblings of a madman: entry 1</h3> 
+<h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
 i dont understand why people love mcdonalds so much<br><br>
   a. the food just straight up isn't good <br>
     go to any other fast food place (other than arby's or burger king)<br>
