--- a/index4.html
+++ b/index4.html
@@ -27,4 +27,5 @@ i dont understand why people love mcdonalds so much<br><br>
   have these people seriously tried In-N-Out, Whataburger, or Jack in the Box and said it was worse than McDonalds??<br>
   i'm seriously done having this argument with people, and i just have to express this<br>
   <img src="ronald.png"><br>
+  <A href="index5.html">to: entry 2</a>
 </html>
