Update and rename index4.html to mcds.html

--- a/mcds.html
+++ b/mcds.html
@@ -5,27 +5,28 @@
 <h3>ramblings of a madman: entry 1</h3> 
 <h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
 i dont understand why people love mcdonalds so much<br><br>
-  a. the food just straight up isn't good <br>
+  a. the food just straight up isn't special / amazing <br>
     go to any other fast food place (other than arby's or burger king)<br>
     do you think that that places food is worse than mcdonalds?? <br>
-    didn't think so nerd <br><br>
+    mc donald's food is basically a baseline for all fast food, and the food itself is C teir at best. <br>
+    and their food has changed so many times it's not as good as it used to be. <br><br>
   b. mcdonalds is a burger place<br>
     i hear what you're saying: "obviously dumbfuck"<br>
     ask anyone what their favorite item is at mcdonalds<br>
     How many times is it a burger.<br>
-    says 'nuff<br><br>
+    I think mcdonalds should actually focus on making their burgers as good as their other items.<br><br>
   c. mcdonald's builds brand loyalty through parents<br>
     people who grew up with mcdonalds generally like it more <br>
-    because people grew up with this place, it built a loyalty to the brand<br>
+    feed a chicken nugget to a person who didn't grow up eating them, and i'll bet it's the weirdest thing they've had up until that point<br>
     and i'm not saying i dont have loyalty to certain brands, cause i do (and they're pretty irrational)<br>
-    but because these people grew up eating mcdonald's, they associate it with happy times<br>
-    and it has you going back because of those happy times.<br>
-    because your parent brought you there as a child, you think in your subconcious that it's the best.<br>
+    but because these people grew up eating mcdonald's, they associate it with their childhood<br>
+    and it has you going back because of rose tinted glasses.<br>
+    nostalgia's a powerful thing, and mcdonalds profits off of it.<br>
   <h1>closing statements</h1><br><br>
-  <h2>mcdonalds has built their entire brand on manipulation and loyalty</h2><br>
+  <h2>mcdonalds has built their entire brand on loyalty and nostalgia</h2><br>
   people who say mcdonald's is the best fast food place are objectively wrong. <br>
   have these people seriously tried In-N-Out, Whataburger, or Jack in the Box and said it was worse than McDonalds??<br>
-  i'm seriously done having this argument with people, and i just have to express this<br>
+  this is a fucking dumbass argument that i'm done having<br>
   <img src="ronald.png"><br>
   <A href="index5.html">to: entry 2</a>
 </html>
