--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <body bgcolor="#000000">
 <font color="#ffffff">
 <center><h1>this website is only for <b>COOL PEOPLE</b> only. </h1> <BR>
-<A href="index2.html">im coole!!</a> | <A href="index3.html"> i HATE you !!! </a>
+<A href="home.html">im coole!!</a> | <A href="fuckyou.html"> i HATE you !!! </a>
 </html>
