--- a/index5.html
+++ b/index5.html
@@ -6,7 +6,7 @@
 <h1>why gobber#6189 is heavy team fortress in real life</h1><br>
 same body type <br><br>
 look<br>
-<img src="heavy.png"><br>
+<img src="heavy.png" width="500" height="500"/><br>
 see<br>
   i told you<br>
 </html>
