--- a/mcds.html
+++ b/mcds.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:red;">
+<body background="pentabg.png">
 <font color="yellow" face="Trebuchet MS">
 <br><br><br><br><center>
 <h3>ramblings of a madman: entry 1</h3> 
