--- a/mcds.html
+++ b/mcds.html
@@ -22,7 +22,7 @@ i dont understand why people love mcdonalds so much<br><br>
     but because these people grew up eating mcdonald's, they associate it with their childhood<br>
     and it has you going back because of rose tinted glasses.<br>
     nostalgia's a powerful thing, and mcdonalds profits off of it.<br>
-  <h1>closing statements</h1><br><br>
+  <h1>closing statements</h1><br>
   <h2>mcdonalds has built their entire brand on loyalty and nostalgia</h2><br>
   people who say mcdonald's is the best fast food place are objectively wrong. <br>
   have these people seriously tried In-N-Out, Whataburger, or Jack in the Box and said it was worse than McDonalds??<br>
