--- a/mcds.html
+++ b/mcds.html
@@ -1,6 +1,6 @@
 <html>
 <body background="pentabg.png">
-<font color="yellow" face="Trebuchet MS">
+<font color="white" face="Trebuchet MS">
 <br><br><br><br><center>
 <h3>ramblings of a madman: entry 1</h3> 
 <h1>I FUCKING HATE MCDONALDS !!!!</h1><br>
