--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
 <body background="star.gif">
-<font color="white" face="Comic Sans MS">
+<font color="white">
 <br><br><br><br><center>
 <h1>WELCOME TO MY HOME PAGE!!!!!!!!!!!!!!!!</h1><br>
 hi !!!!!!!!!!!!!!!1 i love silly kitties and cats <br>
