--- a/index5.html
+++ b/index5.html
@@ -9,4 +9,5 @@ look<br>
 <img src="heavy.png" width="500" height="500"/><br>
 see<br>
   i told you<br>
+  <A href="ter.html">to: entry 3</a>
 </html>
