--- a/ter.html
+++ b/ter.html
@@ -1,5 +1,5 @@
 <html>
-<body background="green">
+<body background="MediumSeaGreen">
 <font color="white">
 <br><br><br><br><center>
 <h3>ramblings of a madman: entry 3</h3> 
