--- a/ter.html
+++ b/ter.html
@@ -1,5 +1,9 @@
 <html>
-<body style="background-color:Chartreuse;">
+   <style>
+      body {
+         background-color: rgb(0, 255, 26);
+      }
+   </style>
 <font color="white">
 <br><br><br><br><center>
 <h3>ramblings of a madman: entry 3</h3> 
