--- a/ter.html
+++ b/ter.html
@@ -1,9 +1,5 @@
 <html>
-   <style>
-      body {
-         background-color: rgb(0, 255, 26);
-      }
-   </style>
+<body style="background-color:lime;">
 <font color="white">
 <br><br><br><br><center>
 <h3>ramblings of a madman: entry 3</h3> 
