--- a/ter.html
+++ b/ter.html
@@ -7,6 +7,6 @@
 1. i dont like it <br>
 2. mincreft is beter <br>
 3. fuck you terraria players cause im cool . <br>
-<img src="FACKYOU.jpg"><br>
+<img src="FACKYOU.jpg" width="400" height="400"/><br>
 
 </html>
